--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ resources/public/js/compiled
 .planck_cache
 node_modules
 checkouts
-temp
+resources/public/styles.css
 .firebaserc
 opts.clj
 notes-history.clj
