Clean up file structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,20 +3,12 @@ target
 checkouts
 *.log
 *.iml
-resources/public/js/compiled
+example/resources/public/js/compiled
+example/resources/public/styles.css
+example/firebase.json
+example/node_modules
+example/.firebaserc
 .planck_cache
 .lumo_cache
-node_modules
-resources/public/styles.css
 .lein-repl-history
-opts.clj
-notes-history.clj
-firebase
-firebase.json
-.firebaserc
 pom.xml*
-src/npm
-old
-opts.clj
-.cljs_live_planck_cache
-script/script/out
